feat: adicionar configuracoes operacionais
